Tue Apr 11 19:16:48 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c:
	  - Fix crash on right click if no server connected. (#338105)

Sun Apr  9 12:07:44 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/conversation-panel.h:
	  - Add a conversation_panel_copy_selection () method.
	* src/fe-gnome/main-window.c:
	  - When we hit ctrl-V we copy the selection from the text entry
	    if there is one; if not we get it from the conversation
	    panel. (#337531)

==================== 0.11 ====================

Wed Apr  5 12:18:24 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	  - Arg -- fix version field

Tue Apr  4 20:17:27 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	* NEWS:
	  - Bump to 0.11

Tue Apr  4 20:10:16 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* AUTHORS:
	* src/fe-gnome/about.c:
	  - Update

Tue Apr  4 19:55:24 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* data/xchat-gnome.glade:
	  - Make the default window title be "XChat-GNOME" instead of
	    "ex-chat"

Mon Apr  3 16:04:59 EDT 2006  Olivier Le Thanh <olivier@lethanh.be>

	* po/fr.po:
	  - Re-Updated french translation.

Mon Apr  3 17:17:32 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/preferences-page-spellcheck.c:
	  - Don't mark property names as translatable

Mon Apr  3 13:50:04 EDT 2006  Olivier Le Thanh <olivier@lethanh.be>

	* po/fr.po:
	  - Updated french translation, merged with rosetta.

Mon Apr  3 12:29:46 EDT 2006  Olivier Le Thanh <olivier@lethanh.be>

	* po/POTFILES.in:
	  - Removed data/dcc-accept.glade since it no longer exists.

Sun Apr  2 18:02:11 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/xtext.c:
	* src/fe-gnome/xtext.h:
	  - Some superficial cleanup, to make it easier when (if?) someone
	    tries to make the enhancements we want.  Who knows if that will